--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.12",
+    "@fortawesome/free-solid-svg-icons": "^5.6.3",
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "@material-ui/core": "^3.6.2",
     "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
@@ -18,6 +21,7 @@
     "botframework-webchat": "^4.1.0",
     "firebase": "^5.7.0",
     "firestore-react": "^0.1.5",
+    "font-awesome": "^4.7.0",
     "material-ui": "^0.20.2",
     "material-ui-icons": "^1.0.0-beta.36",
     "nuka-carousel": "^4.4.5",
@@ -35,6 +39,7 @@
     "react-redux": "^5.1.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "react-slick": "^0.23.2",
     "reactstrap": "^7.0.0",
     "recompose": "^0.30.0",
     "redux-saga": "^0.16.0",
@@ -57,6 +62,7 @@
     "image-webpack-loader": "^4.5.0",
     "node-sass": "^4.5.3",
     "prop-types": "^15.6.2",
+    "react-alice-carousel": "^1.13.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "superagent": "^3.8.3",
