--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^16.4.2",
     "react-admin": "^2.3.1",
     "react-admin-firebase": "^0.2.8",
+    "react-background-slideshow": "^1.0.4",
     "react-containers": "^16.0.5",
     "react-coverflow": "^0.2.17",
     "react-dom": "^16.6.3",
